# NLP_project

./: .gitignore  IMDB Dataset_small.csv  NLP_Project_Merged.ipynb  NLP_Project_Notebook.ipynb  NLP_Project_Notebook_Optimized.ipynb  README_annotator.md  SETUP_CUDA.md  ThingsToCheck.txt  analysis_concepts.md  analysis_report.md  analysis_task1.py  annotate_csv.py  benchmark_analysis.py  bigram.py  data_analysis.ipynb  evaluate_model_prep.py  fix_notebook_keys.py  human_eval_100.annotated.csv  human_eval_100.csv  llm_judge_100_annotated.csv  llm_judge_100_template.csv  merge_notebooks.py  neural_lm.py  neural_model_explanation.md  preprocessing.ipynb  preprocessor.py  pyproject.toml  refine_notebook.py  requirements.txt  test.ipynb  transformer_finetuning.py  trigram.py  update_notebook.py
.ipynb_checkpoints/: NLP_Project_Merged-checkpoint.ipynb  NLP_Project_Notebook-checkpoint.ipynb  NLP_Project_Notebook_Optimized-checkpoint.ipynb
