[project]
name = "nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Phillip Vogler",email = "voglerphillip@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nltk (>=3.9.2,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
