[project]
name = "nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Phillip Vogler",email = "voglerphillip@gmx.de"}
]
readme = "README.md"
requires-python =  ">=3.11,<3.15"
dependencies = [
    "nltk (>=3.9.2,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "torch (>=2.5.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "datasets (>=4.4.2,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "wordcloud (>=1.9.5,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "protobuf (>=6.33.3,<7.0.0)"
]
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
torch = { version = ">=2.5.0", source = "pytorch" }

